refactor: clean up unused imports, redundant null checks, and optimize chunk calculations with Math.clamp